// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessDetailsPanel component tests Snapshot testing with basic data loaded 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-1"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-1"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Details
          </h3>
        </div>
        <div
          class="pf-c-card__body"
        >
          <form
            class="pf-c-form"
            novalidate=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="name"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Name
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-1"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                />
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="businessKey"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Business key
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-2"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  Tr21
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="state"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    State
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-3"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-u-mr-sm"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M512.1,895.9 C300.3,895.9 128.1,723.8 128.1,511.9 C128.1,300.2 300.3,127.9 512.1,127.9 C723.9,127.9 896,300.2 896.100043,511.9 C896.2,723.6 723.8,895.9 512.1,895.9 M512.1,0 C229.7,0 0,229.7 0,512 C0,794.3 229.7,1024 512.1,1024 C794.3,1024 1024,794.3 1024,512 C1024,229.7 794.3,0 512.1,0 M716.3,482.9 C710,495.2 575.5,679.5 493.7,782.4 C478,800.2 463.4,794.2 457.3,790.3 C443.9,781.4 443.1,771.7 451,745 C458.9,718.3 494.1,576 494.1,576 L341.3,576 C328.2,576.2 312.2,576.2 307.1,563.8 C302.2,552 306.9,541.2 314.4,530.8 C370,453.5 508.1,264.9 508.1,264.9 C508.1,264.9 527.2,239.7 541.4,238.3 C554.4,237 562.9,240.5 567,249.6 C572.1,260.2 570.4,272.9 566.8,286.9 C563.5,300 526.4,448 526.4,448 L695.3,448 C702.6,448 711.5,449.4 717.4,457 C723.3,464.6 719.5,477 716.3,482.9"
                    />
                  </svg>
                  Active
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="id"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Id
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class="kogito-management-console--u-WordBreak"
                  data-ouia-component-id="OUIA-Generated-Text-4"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  2d962eef-45b8-48a9-ad4e-9cde0ad6af89
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="endpoint"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Endpoint
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class="kogito-management-console--u-WordBreak"
                  data-ouia-component-id="OUIA-Generated-Text-5"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  <a
                    aria-disabled="false"
                    class="pf-c-button pf-m-link pf-m-inline"
                    data-ouia-component-id="OUIA-Generated-Button-link-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    href="http://localhost:4000/"
                    target="_blank"
                  >
                    http://localhost:4000/
                    <svg
                      aria-hidden="true"
                      class="pf-u-ml-xs"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                      />
                    </svg>
                  </a>
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="start"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Start
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-6"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  <time
                    datetime="1571715644000"
                  >
                    8 months ago
                  </time>
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="lastUpdate"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Last Updated
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-7"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  <time
                    datetime="1571715644000"
                  >
                    8 months ago
                  </time>
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="end"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    End
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-8"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  <time
                    datetime="1571715644000"
                  >
                    8 months ago
                  </time>
                </p>
                
              </div>
            </div>
          </form>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      id=""
    >
      <div
        class="pf-c-card__header"
      >
        <h3
          class="pf-c-title pf-m-xl"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Details
        </h3>
      </div>
      <div
        class="pf-c-card__body"
      >
        <form
          class="pf-c-form"
          novalidate=""
        >
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="name"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-1"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              />
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="businessKey"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Business key
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-2"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                Tr21
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="state"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-3"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <svg
                  aria-hidden="true"
                  class="pf-u-mr-sm"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M512.1,895.9 C300.3,895.9 128.1,723.8 128.1,511.9 C128.1,300.2 300.3,127.9 512.1,127.9 C723.9,127.9 896,300.2 896.100043,511.9 C896.2,723.6 723.8,895.9 512.1,895.9 M512.1,0 C229.7,0 0,229.7 0,512 C0,794.3 229.7,1024 512.1,1024 C794.3,1024 1024,794.3 1024,512 C1024,229.7 794.3,0 512.1,0 M716.3,482.9 C710,495.2 575.5,679.5 493.7,782.4 C478,800.2 463.4,794.2 457.3,790.3 C443.9,781.4 443.1,771.7 451,745 C458.9,718.3 494.1,576 494.1,576 L341.3,576 C328.2,576.2 312.2,576.2 307.1,563.8 C302.2,552 306.9,541.2 314.4,530.8 C370,453.5 508.1,264.9 508.1,264.9 C508.1,264.9 527.2,239.7 541.4,238.3 C554.4,237 562.9,240.5 567,249.6 C572.1,260.2 570.4,272.9 566.8,286.9 C563.5,300 526.4,448 526.4,448 L695.3,448 C702.6,448 711.5,449.4 717.4,457 C723.3,464.6 719.5,477 716.3,482.9"
                  />
                </svg>
                Active
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="id"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Id
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class="kogito-management-console--u-WordBreak"
                data-ouia-component-id="OUIA-Generated-Text-4"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                2d962eef-45b8-48a9-ad4e-9cde0ad6af89
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="endpoint"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Endpoint
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class="kogito-management-console--u-WordBreak"
                data-ouia-component-id="OUIA-Generated-Text-5"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <a
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  href="http://localhost:4000/"
                  target="_blank"
                >
                  http://localhost:4000/
                  <svg
                    aria-hidden="true"
                    class="pf-u-ml-xs"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                    />
                  </svg>
                </a>
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="start"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Start
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-6"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <time
                  datetime="1571715644000"
                >
                  8 months ago
                </time>
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="lastUpdate"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Last Updated
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-7"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <time
                  datetime="1571715644000"
                >
                  8 months ago
                </time>
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="end"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  End
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-8"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <time
                  datetime="1571715644000"
                >
                  8 months ago
                </time>
              </p>
              
            </div>
          </div>
        </form>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProcessDetailsPanel component tests should find a paragraph and click parent process 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-2"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Details
          </h3>
        </div>
        <div
          class="pf-c-card__body"
        >
          <form
            class="pf-c-form"
            novalidate=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="name"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Name
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-9"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                />
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="state"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    State
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-10"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-u-mr-sm"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M512.1,895.9 C300.3,895.9 128.1,723.8 128.1,511.9 C128.1,300.2 300.3,127.9 512.1,127.9 C723.9,127.9 896,300.2 896.100043,511.9 C896.2,723.6 723.8,895.9 512.1,895.9 M512.1,0 C229.7,0 0,229.7 0,512 C0,794.3 229.7,1024 512.1,1024 C794.3,1024 1024,794.3 1024,512 C1024,229.7 794.3,0 512.1,0 M716.3,482.9 C710,495.2 575.5,679.5 493.7,782.4 C478,800.2 463.4,794.2 457.3,790.3 C443.9,781.4 443.1,771.7 451,745 C458.9,718.3 494.1,576 494.1,576 L341.3,576 C328.2,576.2 312.2,576.2 307.1,563.8 C302.2,552 306.9,541.2 314.4,530.8 C370,453.5 508.1,264.9 508.1,264.9 C508.1,264.9 527.2,239.7 541.4,238.3 C554.4,237 562.9,240.5 567,249.6 C572.1,260.2 570.4,272.9 566.8,286.9 C563.5,300 526.4,448 526.4,448 L695.3,448 C702.6,448 711.5,449.4 717.4,457 C723.3,464.6 719.5,477 716.3,482.9"
                    />
                  </svg>
                  Active
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="id"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Id
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class="kogito-management-console--u-WordBreak"
                  data-ouia-component-id="OUIA-Generated-Text-11"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  2d962eef-45b8-48a9-ad4e-9cde0ad6af88
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="endpoint"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Endpoint
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class="kogito-management-console--u-WordBreak"
                  data-ouia-component-id="OUIA-Generated-Text-12"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  <a
                    aria-disabled="false"
                    class="pf-c-button pf-m-link pf-m-inline"
                    data-ouia-component-id="OUIA-Generated-Button-link-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    href="http://localhost:4000/"
                    target="_blank"
                  >
                    http://localhost:4000/
                    <svg
                      aria-hidden="true"
                      class="pf-u-ml-xs"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                      />
                    </svg>
                  </a>
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="start"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Start
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="lastUpdate"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Last Updated
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-13"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  <time
                    datetime="1571715644000"
                  >
                    8 months ago
                  </time>
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="end"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    End
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <p
                  class=""
                  data-ouia-component-id="OUIA-Generated-Text-14"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe="true"
                  data-pf-content="true"
                >
                  <time
                    datetime="1571715644000"
                  >
                    8 months ago
                  </time>
                </p>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="parent"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Parent Process
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <div>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="open-parent-process"
                    type="button"
                  >
                    <span
                      class="pf-c-button__icon pf-m-start"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M313.553 119.669L209.587 7.666c-9.485-10.214-25.676-10.229-35.174 0L70.438 119.669C56.232 134.969 67.062 160 88.025 160H152v272H68.024a11.996 11.996 0 0 0-8.485 3.515l-56 56C-4.021 499.074 1.333 512 12.024 512H208c13.255 0 24-10.745 24-24V160h63.966c20.878 0 31.851-24.969 17.587-40.331z"
                        />
                      </svg>
                    </span>
                    <span>
                      Travels22
                       
                      <span
                        class="pf-c-badge pf-m-unread"
                      >
                        Tra11
                      </span>
                    </span>
                    <div
                      id="kogito-consoles-tooltip-2d962eef-45b8-48a9-ad4e-11-22-0.5"
                    />
                  </button>
                </div>
                
              </div>
            </div>
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-label"
              >
                <label
                  class="pf-c-form__label"
                  for="child"
                >
                  <span
                    class="pf-c-form__label-text"
                  >
                    Sub Processes
                  </span>
                </label>
                 
              </div>
              <div
                class="pf-c-form__group-control"
              >
                <div>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="pf-c-button__icon pf-m-start"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M313.553 392.331L209.587 504.334c-9.485 10.214-25.676 10.229-35.174 0L70.438 392.331C56.232 377.031 67.062 352 88.025 352H152V80H68.024a11.996 11.996 0 0 1-8.485-3.515l-56-56C-4.021 12.926 1.333 0 12.024 0H208c13.255 0 24 10.745 24 24v328h63.966c20.878 0 31.851 24.969 17.587 40.331z"
                        />
                      </svg>
                    </span>
                    <span>
                      Travels33
                       
                      <span
                        class="pf-c-badge pf-m-unread"
                      >
                        Tra33
                      </span>
                    </span>
                    <div
                      id="kogito-consoles-tooltip-23944e2-874R22-48a9-abcd-11-22-0.5"
                    />
                  </button>
                </div>
                
              </div>
            </div>
          </form>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-2"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      id=""
    >
      <div
        class="pf-c-card__header"
      >
        <h3
          class="pf-c-title pf-m-xl"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Details
        </h3>
      </div>
      <div
        class="pf-c-card__body"
      >
        <form
          class="pf-c-form"
          novalidate=""
        >
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="name"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-9"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              />
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="state"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-10"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <svg
                  aria-hidden="true"
                  class="pf-u-mr-sm"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M512.1,895.9 C300.3,895.9 128.1,723.8 128.1,511.9 C128.1,300.2 300.3,127.9 512.1,127.9 C723.9,127.9 896,300.2 896.100043,511.9 C896.2,723.6 723.8,895.9 512.1,895.9 M512.1,0 C229.7,0 0,229.7 0,512 C0,794.3 229.7,1024 512.1,1024 C794.3,1024 1024,794.3 1024,512 C1024,229.7 794.3,0 512.1,0 M716.3,482.9 C710,495.2 575.5,679.5 493.7,782.4 C478,800.2 463.4,794.2 457.3,790.3 C443.9,781.4 443.1,771.7 451,745 C458.9,718.3 494.1,576 494.1,576 L341.3,576 C328.2,576.2 312.2,576.2 307.1,563.8 C302.2,552 306.9,541.2 314.4,530.8 C370,453.5 508.1,264.9 508.1,264.9 C508.1,264.9 527.2,239.7 541.4,238.3 C554.4,237 562.9,240.5 567,249.6 C572.1,260.2 570.4,272.9 566.8,286.9 C563.5,300 526.4,448 526.4,448 L695.3,448 C702.6,448 711.5,449.4 717.4,457 C723.3,464.6 719.5,477 716.3,482.9"
                  />
                </svg>
                Active
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="id"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Id
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class="kogito-management-console--u-WordBreak"
                data-ouia-component-id="OUIA-Generated-Text-11"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                2d962eef-45b8-48a9-ad4e-9cde0ad6af88
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="endpoint"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Endpoint
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class="kogito-management-console--u-WordBreak"
                data-ouia-component-id="OUIA-Generated-Text-12"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <a
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  href="http://localhost:4000/"
                  target="_blank"
                >
                  http://localhost:4000/
                  <svg
                    aria-hidden="true"
                    class="pf-u-ml-xs"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                    />
                  </svg>
                </a>
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="start"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Start
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="lastUpdate"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Last Updated
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-13"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <time
                  datetime="1571715644000"
                >
                  8 months ago
                </time>
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="end"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  End
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-14"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <time
                  datetime="1571715644000"
                >
                  8 months ago
                </time>
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="parent"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Parent Process
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <div>
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="open-parent-process"
                  type="button"
                >
                  <span
                    class="pf-c-button__icon pf-m-start"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M313.553 119.669L209.587 7.666c-9.485-10.214-25.676-10.229-35.174 0L70.438 119.669C56.232 134.969 67.062 160 88.025 160H152v272H68.024a11.996 11.996 0 0 0-8.485 3.515l-56 56C-4.021 499.074 1.333 512 12.024 512H208c13.255 0 24-10.745 24-24V160h63.966c20.878 0 31.851-24.969 17.587-40.331z"
                      />
                    </svg>
                  </span>
                  <span>
                    Travels22
                     
                    <span
                      class="pf-c-badge pf-m-unread"
                    >
                      Tra11
                    </span>
                  </span>
                  <div
                    id="kogito-consoles-tooltip-2d962eef-45b8-48a9-ad4e-11-22-0.5"
                  />
                </button>
              </div>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="child"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Sub Processes
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <div>
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-4"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-c-button__icon pf-m-start"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M313.553 392.331L209.587 504.334c-9.485 10.214-25.676 10.229-35.174 0L70.438 392.331C56.232 377.031 67.062 352 88.025 352H152V80H68.024a11.996 11.996 0 0 1-8.485-3.515l-56-56C-4.021 12.926 1.333 0 12.024 0H208c13.255 0 24 10.745 24 24v328h63.966c20.878 0 31.851 24.969 17.587 40.331z"
                      />
                    </svg>
                  </span>
                  <span>
                    Travels33
                     
                    <span
                      class="pf-c-badge pf-m-unread"
                    >
                      Tra33
                    </span>
                  </span>
                  <div
                    id="kogito-consoles-tooltip-23944e2-874R22-48a9-abcd-11-22-0.5"
                  />
                </button>
              </div>
              
            </div>
          </div>
        </form>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
